--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,6 @@
 .project
 .pydevproject
 .settings
-.pdm-build
 /*.egg-info/
 /dist/
 /build/
@@ -17,7 +16,7 @@ cover/
 .cache/
 .tox
 .python-version
-.pdm-python
 .pytest_cache
 .mypy_cache
 .tmp
+.venv
