--- a/pyproject.toml
+++ b/pyproject.toml
@@ -44,21 +44,48 @@ arrow = ["pyarrow>=7.0.0"]
 fastparquet = ["fastparquet>=0.4.0"]
 
 [build-system]
-requires = ["pdm-backend"]
-build-backend = "pdm.backend"
+requires = ["hatchling"]
+build-backend = "hatchling.build"
 
-[tool.pdm]
-distribution = true
+[tool.hatch.metadata]
+allow-direct-references = true
 
-[tool.pdm.dev-dependencies]
-dev = [
-    "tox",
-    "tox-gh-actions",
+[tool.hatch.build.targets.sdist]
+ignore-vcs = true
+only-include = [
+    "pyathena/",
+    "LICENSE",
+    "pyproject.toml",
+    "README.rst"
+]
+
+[tool.hatch.build.targets.wheel]
+packages = ["pyathena"]
+
+[tool.hatch.version]
+path = "pyathena/__init__.py"
+
+[tool.hatch.env]
+requires = [
+    "hatch-pip-compile"
+]
+
+[tool.hatch.envs.default]
+python = "3.11"
+type = "pip-compile"
+lock-filename = "requirements/requirements.txt"
+pip-compile-verbose = true
+pip-compile-hashes = true
+pip-compile-install-args = [
+    "--no-deps"
+]
+dependencies = [
     "wheel",
     "twine",
     "sqlalchemy>=1.0.0",
     "pandas>=1.3.0",
-    "numpy>=1.24.0",
+    "numpy>=1.26.0;python_version>=\"3.9\"",
+    "numpy>=1.24.0,<1.26.0;python_version<\"3.9\"",
     "pyarrow>=7.0.0",
     "fastparquet>=0.4.0",
     "Jinja2>=3.1.0",
@@ -68,48 +95,36 @@ dev = [
     "pytest-xdist",
     "pytest-dependency",
     "ruff>=0.1.13",
+    "hatch-pip-compile"
 ]
 
-[tool.pdm.version]
-source = "file"
-path = "pyathena/__init__.py"
+[tool.hatch.envs.default.scripts]
+test = "pytest -n 8 --cov pyathena --cov-report html --cov-report term tests/pyathena/"
+test-sqla = "pytest -n 8 --cov pyathena --cov-report html --cov-report term tests/sqlalchemy/"
+fmt = [
+    "ruff check --select I --fix .",
+    "ruff format ."
+]
+chk = [
+    "ruff check .",
+    "ruff format --check .",
+    "mypy ."
+]
 
-[tool.pdm.build]
-includes = ["pyathena", "pyathena/py.typed"]
+[tool.hatch.envs.test]
+template = "default"
+lock-filename = "requirements/requirements-{env_name}.txt"
+pip-compile-verbose = true
+pip-compile-hashes = true
+pip-compile-install-args = [
+    "--no-deps"
+]
 
-[tool.tox]
-legacy_tox_ini = """
-[tox]
-isolated_build = true
-envlist = py{38,39,310,311},py{38,39,310,311}-sqla
-
-[gh-actions]
-python =
-    3.8: py38
-    3.9: py39
-    3.10: py310
-    3.11: py311
-
-[testenv]
-allowlist_externals =
-    pdm
-    make
-commands =
-    pdm install -v --dev
-    make test
-passenv =
-    AWS_*
-    TOXENV
-    GITHUB_*
-
-[testenv:py{38,39,310,311}-sqla]
-commands =
-    pdm install -v --dev
-    make test-sqla
-"""
+[[tool.hatch.envs.test.matrix]]
+python = ["3.8", "3.9", "3.10", "3.11"]
 
 [tool.pytest.ini_options]
-norecursedirs = ["benchmarks", ".tox", ".venv"]
+norecursedirs = ["benchmarks", ".venv"]
 
 [tool.sqla_testing]
 requirement_cls = "pyathena.sqlalchemy.requirements:Requirements"
@@ -119,10 +134,11 @@ profile_file = "tests/sqlalchemy/profiles.txt"
 line-length = 100
 exclude = [
     ".venv",
-    ".tox",
     "tests"
 ]
 target-version = "py38"
+
+[tool.ruff.lint]
 # https://docs.astral.sh/ruff/rules/
 select = [
     "E",  # pycodestyle errors
