--- a/requirements/requirements-test.py3.11.txt
+++ b/requirements/requirements-test.py3.11.txt
@@ -242,7 +242,9 @@ coverage==7.6.9 \
     --hash=sha256:f7b15f589593110ae767ce997775d645b47e5cbbf54fd322f8ebea6277466cec \
     --hash=sha256:fd1213c86e48dfdc5a0cc676551db467495a95a662d2396ecd58e719191446e1 \
     --hash=sha256:ff74026a461eb0660366fb01c650c1d00f833a086b336bdad7ab00cc952072b3
-    # via pytest-cov
+    # via
+    #   coverage
+    #   pytest-cov
 cramjam==2.9.0 \
     --hash=sha256:00d96f798bc980b29f8e1c3ed7d554050e05d4cde23d1633ffed4cd63110024a \
     --hash=sha256:013cb872205641c6e5269f530ed40aaaa5640d84e0d8f33b89f5a1bf7f655527 \
