--- a/pyproject.toml
+++ b/pyproject.toml
@@ -45,6 +45,24 @@ pandas = ["pandas>=1.3.0"]
 arrow = ["pyarrow>=7.0.0"]
 fastparquet = ["fastparquet>=0.4.0"]
 
+[dependency-groups]
+dev = [
+    "sqlalchemy>=1.0.0",
+    "pandas>=1.3.0",
+    "numpy>=1.26.0;python_version>=\"3.9\"",
+    "numpy>=1.24.0,<1.26.0;python_version<\"3.9\"",
+    "pyarrow>=7.0.0",
+    "fastparquet>=0.4.0",
+    "Jinja2>=3.1.0",
+    "mypy>=0.900",
+    "pytest>=3.5",
+    "pytest-cov",
+    "pytest-xdist",
+    "pytest-dependency",
+    "sphinx",
+    "types-python-dateutil",
+]
+
 [build-system]
 requires = ["hatchling"]
 build-backend = "hatchling.build"
@@ -67,68 +85,12 @@ packages = ["pyathena"]
 [tool.hatch.version]
 path = "pyathena/__init__.py"
 
-[tool.hatch.env]
-requires = [
-    "hatch-pip-compile"
-]
-
-[tool.hatch.envs.default]
-python = "3.11"
-type = "pip-compile"
-lock-filename = "requirements/requirements.txt"
-pip-compile-verbose = true
-pip-compile-hashes = true
-pip-compile-install-args = [
-    "--no-deps"
-]
-dependencies = [
-    "wheel",
-    "twine",
-    "sqlalchemy>=1.0.0",
-    "pandas>=1.3.0",
-    "numpy>=1.26.0;python_version>=\"3.9\"",
-    "numpy>=1.24.0,<1.26.0;python_version<\"3.9\"",
-    "pyarrow>=7.0.0",
-    "fastparquet>=0.4.0",
-    "Jinja2>=3.1.0",
-    "mypy>=0.900",
-    "pytest>=3.5",
-    "pytest-cov",
-    "pytest-xdist",
-    "pytest-dependency",
-    "ruff>=0.1.13",
-    "hatch-pip-compile",
-    "sphinx",
-    "types-python-dateutil",
-]
-
-[tool.hatch.envs.default.scripts]
-test = "pytest -n 8 --cov pyathena --cov-report html --cov-report term tests/pyathena/"
-test-sqla = "pytest -n 8 --cov pyathena --cov-report html --cov-report term tests/sqlalchemy/"
-fmt = [
-    "ruff check --select I --fix .",
-    "ruff format ."
-]
-chk = [
-    "ruff check .",
-    "ruff format --check .",
-    "mypy ."
-]
-
-[tool.hatch.envs.test]
-template = "default"
-lock-filename = "requirements/requirements-{env_name}.txt"
-pip-compile-verbose = true
-pip-compile-hashes = true
-pip-compile-install-args = [
-    "--no-deps"
-]
-
-[[tool.hatch.envs.test.matrix]]
-python = ["3.9", "3.10", "3.11", "3.12", "3.13"]
-
 [tool.pytest.ini_options]
-norecursedirs = ["benchmarks", ".venv"]
+norecursedirs = [
+    "benchmarks",
+    ".venv",
+    ".tox"
+]
 
 [tool.sqla_testing]
 requirement_cls = "pyathena.sqlalchemy.requirements:Requirements"
@@ -138,6 +100,7 @@ profile_file = "tests/sqlalchemy/profiles.txt"
 line-length = 100
 exclude = [
     ".venv",
+    ".tox",
 ]
 target-version = "py38"
 
@@ -168,4 +131,38 @@ warn_no_return = true
 warn_return_any = true
 warn_unreachable = true
 warn_unused_configs = true
-exclude = ["benchmarks.*", "tests.*", ".tox.*", ".venv.*"]
+exclude = [
+    "benchmarks.*",
+    "tests.*",
+    ".venv.*",
+    ".tox.*",
+]
+
+[tool.tox]
+legacy_tox_ini = """
+[tox]
+isolated_build = true
+envlist = py{39,310,311,312,313}
+
+[gh-actions]
+python =
+    3.9: py39
+    3.10: py310
+    3.11: py311
+    3.12: py312
+    3.13: py313
+
+[testenv]
+allowlist_externals =
+    uv
+    uvx
+    make
+commands =
+    uv sync --group dev
+    make test
+    make test-sqla
+passenv =
+    TOXENV
+    AWS_*
+    GITHUB_*
+"""
