--- a/pyproject.toml
+++ b/pyproject.toml
@@ -49,8 +49,7 @@ fastparquet = ["fastparquet>=0.4.0"]
 dev = [
     "sqlalchemy>=1.0.0",
     "pandas>=1.3.0",
-    "numpy>=1.26.0;python_version>=\"3.9\"",
-    "numpy>=1.24.0,<1.26.0;python_version<\"3.9\"",
+    "numpy>=1.26.0",
     "pyarrow>=7.0.0",
     "fastparquet>=0.4.0",
     "Jinja2>=3.1.0",
