Enable flake8-comprehensions

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -112,8 +112,8 @@ select = [
     "I",  # isort
     "N",  # pep8-naming
     "B",  # flake8-bugbear
+    "C4",  # flake8-comprehensions
     # "SIM",  # flake8-simplify
-    # "C4",  # flake8-comprehensions
     # "UP",  # pyupgrade
 ]
 
