--- a/pyproject.toml
+++ b/pyproject.toml
@@ -44,6 +44,13 @@ sqlalchemy = ["sqlalchemy>=1.0.0"]
 pandas = ["pandas>=1.3.0"]
 arrow = ["pyarrow>=7.0.0"]
 fastparquet = ["fastparquet>=0.4.0"]
+# S3 support for reading UNLOAD results from S3
+# These packages are implicitly required when fsspec accesses S3 paths.
+# Recommended for production UNLOAD operations.
+s3 = [
+    "s3fs>=2023.6.0",
+    "aiobotocore>=2.5.0",
+]
 
 [dependency-groups]
 dev = [
@@ -52,6 +59,8 @@ dev = [
     "numpy>=1.26.0",
     "pyarrow>=7.0.0",
     "fastparquet>=0.4.0",
+    "s3fs>=2023.6.0",
+    "aiobotocore>=2.5.0",
     "Jinja2>=3.1.0",
     "mypy>=0.900",
     "pytest>=3.5",
@@ -125,7 +134,7 @@ select = [
 ]
 
 [tool.mypy]
-python_version = 3.9
+python_version = "3.9"
 follow_imports = "silent"
 disallow_any_generics = true
 strict_optional = true
