--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -32,13 +32,13 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
           enable-cache: true
-      # TODO: In the case of Python 3.13, the following error occurs, so install Python using setup-python.
+      # TODO: In the case of Python 3.13 and 3.14, the following error occurs, so install Python using setup-python.
       #   ../meson.build:44:2: ERROR: Problem encountered: Cannot compile
       #   `Python.h`. Perhaps you need to install python-dev|python-devel
       - uses: actions/setup-python@v5
         with:
           python-version: ${{ matrix.python-version }}
-        if: matrix.python-version == '3.13'
+        if: matrix.python-version == '3.13' || matrix.python-version == '3.14'
       - run: |
           make tool
 
